--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Anara Sagyndykova</h1>
+    <header>
+        <p>Anara Sagyndykova</p>
+        <div class="header_right">
+            <p>About</p>
+            <p>Contact</p>
+        </div>
+    </header>
+    <main>
+        <div class="left_main">
+            <p>Front-End Development</p>
+            <h1>Hello, my name is Anara Sagyndykova</h1>
+            <p class="about_me"> I'm a student of IT Academy with major in Front-End Development. 
+            </p>       
+            <a href="https://github.com/AnaraSaga" target="_blank">
+                <input class="projects_btn" type="button" value="Projects">
+            </a>
+            <input class="linkedin_btn" type="button" value="LinkedIn">
+        </div>
+        <img src="img/001-02.jpg" alt="foto">
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
